--- a/index.html
+++ b/index.html
@@ -1,1 +1,111 @@
-marcflennert.com
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <title>Marc Flennert</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style"
+          content="black-translucent"/>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+    <meta name="Robots" content="index,follow"/>
+    <meta name="verify-v1"
+          content="Rc6KplhAOgXutS7j+eHBaJpe4g21p3yvO663bjNJ8v0="/>
+    <meta name="google-site-verification"
+          content="zrmxmTlJtteLgRs9qxjBwvl2y22ydIzDr3gNnuC-ApY"/>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="css/main.css">
+    <!--
+    <link rel="apple-touch-icon" href="/img/touch-icon-iphone.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="/img/touch-icon-ipad.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="/img/touch-icon-iphone4.png" />
+    -->
+</head>
+<body>
+
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed"
+                    data-toggle="collapse" data-target="#navbar-collapse-1"
+                    aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#about">Marc Flennert</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="#home" data-toggle="collapse"
+                       data-target="#navbar-collapse-1">about</a></li>
+                <li><a href="#work" data-toggle="collapse"
+                       data-target="#navbar-collapse-1">work</a></li>
+                <li><a href="#contact" data-toggle="collapse"
+                       data-target="#navbar-collapse-1">contact</a></li>
+                <li><a href="http://swisslab.tumblr.com/"
+                       target="_blank">Tumblr
+                </a></li>
+                <li><a href="https://vimeo.com/marcflennert"
+                       target="_blank">Vimeo</a></li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+</nav>
+
+<div class="container">
+    <div class="row">
+        <div class="page-body col-xs-12">
+            <div class="well" id="page-body">
+                <div class="container">
+                    <h3>About</h3>
+
+                    <p>A lifelong photographer, Marc Flennert's passion is the practice of cinematography. With the
+                        combination of his natural creativity and technical know how, he's able to infuse his
+                        approach with a style of his own. Over the years he's gained vast...A lifelong photographer,
+                        Marc
+                        Flennert's passion is the practice of cinematography.
+                        With the combination of his natural creativity and
+                        technical know how, he's able to infuse his approach
+                        with a style of his own. Over the years Flennert gained
+                        a vast experience working hand in hand with award
+                        winning directors, producers and agencies servicing
+                        major brands. Flennert continues to refine his talents
+                        by continually immersing himself in an array of projects
+                        around the world.</p>
+                </div>
+            </div>
+            <!-- // .well -->
+        </div>
+    </div>
+</div>
+
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="copyright">
+                    <p>&copy;2017 Marc Flennert. All rights reserved.
+                        Los Angeles, California.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+<!--This sets the baseUrl to the "scripts" directory, and
+    loads a script that will have a module ID of 'main'-->
+<script data-main="js/rjsMain" src="js/require.js"></script>
+
+</body>
+</html>
