Update styles. Embed copy. Remove JS infrastructure and replace with Google Analytics source. Add embedded Vimeo videos.

--- a/index.html
+++ b/index.html
@@ -46,12 +46,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="#home" data-toggle="collapse"
-                       data-target="#navbar-collapse-1">about</a></li>
-                <li><a href="#work" data-toggle="collapse"
-                       data-target="#navbar-collapse-1">work</a></li>
                 <li><a href="#contact" data-toggle="collapse"
-                       data-target="#navbar-collapse-1">contact</a></li>
+                       data-target="#navbar-collapse-1">Contact</a></li>
                 <li><a href="http://swisslab.tumblr.com/"
                        target="_blank">Tumblr
                 </a></li>
@@ -61,32 +57,63 @@
         </div>
         <!-- /.navbar-collapse -->
     </div>
-    <!-- /.container-fluid -->
+    <!-- /.container -->
 </nav>
 
-<div class="container">
+<div class="container main-content">
     <div class="row">
-        <div class="page-body col-xs-12">
-            <div class="well" id="page-body">
-                <div class="container">
-                    <h3>About</h3>
-
-                    <p>A lifelong photographer, Marc Flennert's passion is the practice of cinematography. With the
-                        combination of his natural creativity and technical know how, he's able to infuse his
-                        approach with a style of his own. Over the years he's gained vast...A lifelong photographer,
-                        Marc
-                        Flennert's passion is the practice of cinematography.
-                        With the combination of his natural creativity and
-                        technical know how, he's able to infuse his approach
-                        with a style of his own. Over the years Flennert gained
-                        a vast experience working hand in hand with award
-                        winning directors, producers and agencies servicing
-                        major brands. Flennert continues to refine his talents
-                        by continually immersing himself in an array of projects
-                        around the world.</p>
+        <div class="page-body col-xs-9">
+            <div class="well custom-well" id="page-body">
+                <div>
+                    <p>RANGE ROVER SPORT - <em>Inferno</em></p>
+                    <iframe src="https://player.vimeo.com/video/196012460" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                 </div>
-            </div>
-            <!-- // .well -->
+
+                <div>
+                    <p>BMW SCRAMBLER - <em>Teaser</em></p>
+                    <iframe src="https://player.vimeo.com/video/178618648" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+
+                <div>
+                    <p>MARK KNOPFLER - <em>Tracker</em></p>
+                    <iframe src="https://player.vimeo.com/video/120320873" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+
+                <div>
+                    <p>VOLKSWAGEN - <em>Rally</em></p>
+                    <iframe src="https://player.vimeo.com/video/79350677" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+
+                <div>
+                    <p>PROJECT F1297 - <em>Music by Gesaffelstein 'Viol'</em>em</p>
+                    <iframe src="https://player.vimeo.com/video/45605348" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+
+                <div>
+                    <p>LACOSTE L!VE - <em>Tokyo</em></p>
+                    <iframe src="https://player.vimeo.com/video/60107207" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+
+                <div>
+                    <p>VOLVO - <em>XC60</em></p>
+                    <iframe src="https://player.vimeo.com/video/116001568" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+
+                <div>
+                    <p>NIKON  Imagination</p>
+                    <iframe src="https://player.vimeo.com/video/61056995" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+        </div>
+        </div>
+        <div class="col-xs-3">
+            <p>A lifelong photographer, Marc Flennert's passion is the practice of cinematography. With the
+                combination of his natural creativity and technical know how, he's able to infuse his
+                approach with a style of his own. Over the years he's gained vast...A lifelong photographer,
+                Marc Flennert's passion is the practice of cinematography. With the combination of his
+                natural creativity and technical know how, he's able to infuse his approach with a style of
+                his own. Over the years Flennert gained a vast experience working hand in hand with award
+                winning directors, producers and agencies servicing major brands. Flennert continues to
+                refine his talents by continually immersing himself in an array of projects around the world.</p>
         </div>
     </div>
 </div>
@@ -103,9 +130,16 @@
         </div>
     </div>
 </footer>
-<!--This sets the baseUrl to the "scripts" directory, and
-    loads a script that will have a module ID of 'main'-->
-<script data-main="js/rjsMain" src="js/require.js"></script>
+
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-2716088-26', 'auto');
+    ga('send', 'pageview');
+</script>
 
 </body>
 </html>
