Update profile image.

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         </div>
         </div>
         <div class="col-xs-3">
+            <img src="img/marcflennert01sm.jpeg" alt="Marc Flennert" />
             <p>A lifelong photographer, Marc Flennert's passion is the practice of cinematography. With the
                 combination of his natural creativity and technical know how, he's able to infuse his
                 approach with a style of his own. Over the years he's gained vast...A lifelong photographer,
