--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="apple-touch-icon" sizes="114x114" href="/img/touch-icon-iphone4.png" />
     -->
 </head>
-<body>
+<body style="background-color: #F6F6F6">
 
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
@@ -46,8 +46,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="#contact" data-toggle="collapse"
-                       data-target="#navbar-collapse-1">Contact</a></li>
+                <li>
+                    <a href="mailto:info@marcflennert.com" data-toggle="collapse"
+                       data-target="#navbar-collapse-1" target="_blank">Contact</a></li>
                 <li><a href="http://swisslab.tumblr.com/"
                        target="_blank">Tumblr
                 </a></li>
@@ -62,8 +63,8 @@
 
 <div class="container main-content">
     <div class="row">
-        <div class="page-body col-xs-9">
-            <div class="well custom-well" id="page-body">
+        <div class="col-md-9 col-xs-12">
+            <div class="custom-well" id="page-body">
                 <div>
                     <p>RANGE ROVER SPORT - <em>Inferno</em></p>
                     <iframe src="https://player.vimeo.com/video/196012460" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -103,10 +104,10 @@
                     <p>NIKON  Imagination</p>
                     <iframe src="https://player.vimeo.com/video/61056995" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                 </div>
+            </div>
         </div>
-        </div>
-        <div class="col-xs-3">
-            <img src="img/marcflennert01sm.jpeg" alt="Marc Flennert" />
+        <div class="col-md-3 col-xs-12">
+            <img src="img/marcflennert01md.jpeg" alt="Marc Flennert" class="img-responsive" /><br />
             <p>A lifelong photographer, Marc Flennert's passion is the practice of cinematography. With the
                 combination of his natural creativity and technical know how, he's able to infuse his
                 approach with a style of his own. Over the years he's gained vast...A lifelong photographer,
