--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="apple-mobile-web-app-status-bar-style"
-          content="black-translucent"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <meta name="Robots" content="index,follow"/>
-    <meta name="verify-v1"
-          content="Rc6KplhAOgXutS7j+eHBaJpe4g21p3yvO663bjNJ8v0="/>
-    <meta name="google-site-verification"
-          content="zrmxmTlJtteLgRs9qxjBwvl2y22ydIzDr3gNnuC-ApY"/>
+    <meta name="verify-v1" content="Rc6KplhAOgXutS7j+eHBaJpe4g21p3yvO663bjNJ8v0="/>
+    <meta name="google-site-verification" content="zrmxmTlJtteLgRs9qxjBwvl2y22ydIzDr3gNnuC-ApY"/>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -67,56 +64,70 @@
             <div class="custom-well" id="page-body">
                 <div>
                     <p>RANGE ROVER SPORT - <em>Inferno</em></p>
-                    <iframe src="https://player.vimeo.com/video/196012460" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://player.vimeo.com/video/196012460" class="embed-responsive-item" frameborder="0"
+                            webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    </div>
                 </div>
 
                 <div>
                     <p>BMW SCRAMBLER - <em>Teaser</em></p>
-                    <iframe src="https://player.vimeo.com/video/178618648" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://player.vimeo.com/video/178618648" class="embed-responsive-item" frameborder="0"
+                            webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    </div>
                 </div>
 
                 <div>
                     <p>MARK KNOPFLER - <em>Tracker</em></p>
-                    <iframe src="https://player.vimeo.com/video/120320873" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://player.vimeo.com/video/120320873" class="embed-responsive-item" frameborder="0"
+                            webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    </div>
                 </div>
 
                 <div>
                     <p>VOLKSWAGEN - <em>Rally</em></p>
-                    <iframe src="https://player.vimeo.com/video/79350677" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://player.vimeo.com/video/79350677" class="embed-responsive-item" frameborder="0"
+                                webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    </div>
                 </div>
 
                 <div>
                     <p>PROJECT F1297 - <em>Music by Gesaffelstein 'Viol'</em>em</p>
-                    <iframe src="https://player.vimeo.com/video/45605348" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://player.vimeo.com/video/45605348" class="embed-responsive-item" frameborder="0"
+                                webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    </div>
                 </div>
 
                 <div>
                     <p>LACOSTE L!VE - <em>Tokyo</em></p>
-                    <iframe src="https://player.vimeo.com/video/60107207" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://player.vimeo.com/video/60107207" class="embed-responsive-item" frameborder="0"
+                                webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    </div>
                 </div>
 
                 <div>
                     <p>VOLVO - <em>XC60</em></p>
-                    <iframe src="https://player.vimeo.com/video/116001568" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://player.vimeo.com/video/116001568" class="embed-responsive-item" frameborder="0"
+                                webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    </div>
                 </div>
 
                 <div>
-                    <p>NIKON  Imagination</p>
-                    <iframe src="https://player.vimeo.com/video/61056995" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    <p>NIKON Imagination</p>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://player.vimeo.com/video/61056995" class="embed-responsive-item" frameborder="0"
+                                webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-3 col-xs-12">
-            <img src="img/marcflennert01md.jpeg" alt="Marc Flennert" class="img-responsive" /><br />
-            <p>A lifelong photographer, Marc Flennert's passion is the practice of cinematography. With the
-                combination of his natural creativity and technical know how, he's able to infuse his
-                approach with a style of his own. Over the years he's gained vast...A lifelong photographer,
-                Marc Flennert's passion is the practice of cinematography. With the combination of his
-                natural creativity and technical know how, he's able to infuse his approach with a style of
-                his own. Over the years Flennert gained a vast experience working hand in hand with award
-                winning directors, producers and agencies servicing major brands. Flennert continues to
-                refine his talents by continually immersing himself in an array of projects around the world.</p>
-        </div>
+
     </div>
 </div>
 
@@ -134,10 +145,17 @@
 </footer>
 
 <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-2716088-26', 'auto');
     ga('send', 'pageview');
