Update styling, markup.

--- a/index.html
+++ b/index.html
@@ -63,67 +63,67 @@
         <div class="col-md-9 col-xs-12">
             <div class="custom-well" id="page-body">
                 <div>
-                    <p>RANGE ROVER SPORT - <em>Inferno</em></p>
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://player.vimeo.com/video/196012460" class="embed-responsive-item" frameborder="0"
                             webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                     </div>
+                    <p class="video-title">RANGE ROVER SPORT - <em>Inferno</em></p>
                 </div>
 
                 <div>
-                    <p>BMW SCRAMBLER - <em>Teaser</em></p>
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://player.vimeo.com/video/178618648" class="embed-responsive-item" frameborder="0"
                             webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                     </div>
+                    <p class="video-title">BMW SCRAMBLER - <em>Teaser</em></p>
                 </div>
 
                 <div>
-                    <p>MARK KNOPFLER - <em>Tracker</em></p>
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://player.vimeo.com/video/120320873" class="embed-responsive-item" frameborder="0"
                             webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                     </div>
+                    <p class="video-title">MARK KNOPFLER - <em>Tracker</em></p>
                 </div>
 
                 <div>
-                    <p>VOLKSWAGEN - <em>Rally</em></p>
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://player.vimeo.com/video/79350677" class="embed-responsive-item" frameborder="0"
                                 webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                     </div>
+                    <p class="video-title">VOLKSWAGEN - <em>Rally</em></p>
                 </div>
 
                 <div>
-                    <p>PROJECT F1297 - <em>Music by Gesaffelstein 'Viol'</em>em</p>
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://player.vimeo.com/video/45605348" class="embed-responsive-item" frameborder="0"
                                 webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                     </div>
+                    <p class="video-title">PROJECT F1297 - <em>Music by Gesaffelstein 'Viol'</em>em</p>
                 </div>
 
                 <div>
-                    <p>LACOSTE L!VE - <em>Tokyo</em></p>
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://player.vimeo.com/video/60107207" class="embed-responsive-item" frameborder="0"
                                 webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                     </div>
+                    <p class="video-title">LACOSTE L!VE - <em>Tokyo</em></p>
                 </div>
 
                 <div>
-                    <p>VOLVO - <em>XC60</em></p>
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://player.vimeo.com/video/116001568" class="embed-responsive-item" frameborder="0"
                                 webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                     </div>
+                    <p class="video-title">VOLVO - <em>XC60</em></p>
                 </div>
 
                 <div>
-                    <p>NIKON Imagination</p>
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://player.vimeo.com/video/61056995" class="embed-responsive-item" frameborder="0"
                                 webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                     </div>
+                    <p class="video-title">NIKON Imagination</p>
                 </div>
             </div>
         </div>
