--- a/index.html
+++ b/index.html
@@ -26,12 +26,10 @@
 <body style="background-color: #F6F6F6">
 
 <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
+    <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed"
-                    data-toggle="collapse" data-target="#navbar-collapse-1"
-                    aria-expanded="false">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -43,19 +41,17 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li>
-                    <a href="mailto:info@marcflennert.com" data-toggle="collapse"
-                       data-target="#navbar-collapse-1" target="_blank">Contact</a></li>
-                <li><a href="http://swisslab.tumblr.com/"
-                       target="_blank">Tumblr
-                </a></li>
-                <li><a href="https://vimeo.com/marcflennert"
-                       target="_blank">Vimeo</a></li>
+                <li><a href="#stills" data-toggle="collapse" data-target="#navbar-collapse-1"
+                       target="_blank">stills</a></li>
+                <li><a href="mailto:info@marcflennert.com" data-toggle="collapse" data-target="#navbar-collapse-1"
+                       target="_blank">contact</a></li>
+                <li><a href="http://swisslab.tumblr.com/" data-toggle="collapse" data-target="#navbar-collapse-1"
+                       target="_blank">tumblr</a></li>
+                <li><a href="https://vimeo.com/marcflennert" data-toggle="collapse" data-target="#navbar-collapse-1"
+                       target="_blank">vimeo</a></li>
             </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container -->
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container -->
 </nav>
 
 <div class="container main-content">
